# Multi-Camera-SLAM

./: .gitattributes  CMakeLists.txt  README.md  build_ros.sh  package.xml
Examples/Lafida/: multi_col_slam_lafida
Examples/ROS/MultiCol-SLAM/: CMakeLists.txt  manifest.xml
Examples/ROS/MultiCol-SLAM/include/: camNodelet.h
Examples/ROS/MultiCol-SLAM/src/: ros_multi.cc  ros_multi_backup.cc
src/: cMultiFrame.cpp  camDriver.cpp  camNodelet.cpp  imuDriver.cpp
